[tool.poetry]
name = "algorithms-and-data-structures"
version = "0.1.0"
description = ""
authors = ["francojposa <franco@francoposa.io>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"
pylint = "^2.5.3"
ipython = "^7.16.1"
mypy = "^0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
