[tool.poetry]
name = "algorithms-and-data-structures"
version = "0.1.0"
description = ""
authors = ["francojposa <franco@francoposa.io>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "1.*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
pylint = "*"
ipython = "^*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
